[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-responses-proxy"
version = "0.1.0"
description = "Codex CLI adapter that translates Codex Responses-shaped requests to DeepSeek chat completions."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ds_responses_proxy"]
